# FreeCad-McCad

./: .gitignore  McCadConfig.txt  README.md
Project Source Code/FileBackUp/App/: AppPythonTest.cpp  CMakeLists.txt  PreCompiled.h
Project Source Code/FileBackUp/Gui/: AppPythonTestGui.cpp  Command.cpp  PreCompiled.h  Workbench.h
Project Source Code/src/Gui/: CommandView.cpp  SoFCSelection.cpp  View3DPy.cpp
Project Source Code/src/Mod/: CMakeLists.txt
Project Source Code/src/Mod/Inspection/Gui/: Command.cpp
Project Source Code/src/Mod/KIT/: CMakeLists.txt  InitGui.py  KIT.dox
Project Source Code/src/Mod/KIT/App/: CMakeLists.txt
Project Source Code/src/Mod/KIT/Gui/: AppKITGui.cpp  PreCompiled.h  Workbench.cpp  Workbench.h
Project Source Code/src/Mod/McCad/App/Convertor/: McCadCombSurfaces.cxx  McCadConvexSolid.cxx  McCadConvexSolid.hxx  McCadExtBndFace.hxx  McCadVoidCell.cxx  McCadVoidCell.hxx
Project Source Code/src/Mod/McCad/App/Python_SRC/: TaskPanel.py
Project Source Code/src/Mod/Mesh/Gui/: MeshSelection.cpp
Project Source Code/src/Mod/Points/App/: CMakeLists.txt
Project Source Code/src/Mod/PythonTest/: CMakeLists.txt  Init.py  InitGui.py  PyGui.py
Project Source Code/src/Mod/PythonTest/Resources/: PythonTest.qrc  PythonTest_rc.py
Project Source Code/src/Mod/Ship/: ShipGui.py
Project Source Code/src/Mod/Ship/shipLoadExample/: TaskPanel.py
Project Source Code/src/Mod/Spreadsheet/App/: McCadDocObserver.cpp  McCadDocObserver.h
Project Source Code/src/Mod/Test/: CreateBox.py
project/: CMakeLists.txt  README.md
project/FileBackUp/Gui/: CMakeLists.txt  Workbench.cpp
project/src/Gui/: MouseSelection.cpp  Selection.cpp
project/src/Mod/KIT/: Init.py
project/src/Mod/KIT/App/: AppKIT.cpp  PreCompiled.h
project/src/Mod/KIT/Gui/: CMakeLists.txt  Command.cpp
project/src/Mod/McCad/App/Convertor/: McCadAddAstSurface.cxx  McCadExtBndFace.cxx
project/src/Mod/McCad/App/Python_SRC/: Paths.py
project/src/Mod/PythonTest/: CreatBox.py  Observer.py  PythonTest.dox
project/src/Mod/Ship/: InitGui.py
project/src/Mod/Ship/shipAreasCurve/: Preview.py
project/src/Mod/Test/: CMakeLists.txt  InitGui.py
